# qlog

./: CMakeLists.txt  Doxyfile.in  README.md
include/: qlog.hpp
test/: main.cpp
